--- a/style.css
+++ b/style.css
@@ -5,5 +5,21 @@ body {
 button {
   width: 200px;
   height: 100px;
-  background-color: pink;
+  font-size: 26px;
+  background-color: #e5b6d5;
+  border: 10px solid #cc7fb5;
+  border-top-color: #b2479a;
+  border-bottom-color: #b2479a;
+  color: white;
+  margin: 15px;
+}
+
+.container {
+  outline: 1px solid black;
+  width: 100%;
+  height: 100vh;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
 }
