--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 body {
   font-family: 'Open Sans', sans-serif;
+
 }
 
 button {
   width: 200px;
   height: 100px;
   font-size: 26px;
-  color: white;
+  color: #ffffff;
   margin: 15px;
   background-color: #e5b6d5;
   border: 10px solid #cc7fb5;
   border-top-color: #b2479a;
   border-bottom-color: #b2479a;
+  font-weight: 100px;
+  letter-spacing: 3px;
 }
 
 .container {
@@ -32,4 +35,20 @@ button:hover {
   border: 10px solid #e5b6d5;
   border-top-color: #cc7fb5;
   border-bottom-color:#cc7fb5;
+}
+
+@media screen and (max-width: 480px) {
+  .random {
+    margin-top: 50%;
+  }
+  .container {
+    display: inline-block;
+    text-align: center;
+  }
+  .white {
+    height: 50px;
+    font-size: 20px;
+    margin-top: 25px;
+
+  }
 }
