--- a/mobile-style.css
+++ b/mobile-style.css
@@ -1,3 +1,5 @@
+@media screen and (min-width: 400px) {
+
 button {
   font-family: 'Open Sans', sans-serif;
   width: 285px;
@@ -27,7 +29,7 @@ button:hover {
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100vh`;
   display: inline-block;
   text-align: center;
 
@@ -42,16 +44,20 @@ button:hover {
   margin-top: 30px;
 }
 
+}
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 600px) {
+
   .container {
     display: inline-flex;
     justify-content: center;
     align-items: center;
 }
+
   .random {
     margin-top: 2%;
 }
+
   .white {
     width: 285px;
     height: 143px;
@@ -60,20 +66,3 @@ button:hover {
 }
 
 }
-/*
-@media screen and (max-width: 600px) {
-  .container {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-}
-  .random {
-    margin-top: 2%;
-}
-  .white {
-    width: 285px;
-    height: 143px;
-    font-size: 40px;
-    margin-top: 2%;
-}
-}*/
